--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Awesome Extension",
-	"version": "0.0.0",
+	"name": "HN Comment",
+	"version": "0.0.1",
 	"description": "An awesome new browser extension",
-	"homepage_url": "https://github.com/fregante/browser-extension-template",
+	"homepage_url": "https://github.com/lookfirst/hn-comment",
 	"manifest_version": 3,
 	"minimum_chrome_version": "100",
 	"browser_specific_settings": {
@@ -18,12 +18,12 @@
 		"storage"
 	],
 	"host_permissions": [
-		"https://github.com/*"
+		"https://news.ycombinator.com/*"
 	],
 	"content_scripts": [
 		{
-			"matches": [ "https://github.com/fregante/browser-extension-template/*" ],
-			"js": [ "content.js" ],
+			"matches": [ "https://github.com/lookfirst/hn-comment/*" ],
+			"js": [ "content.ts" ],
 			"css": [ "content.css" ],
 			"run_at": "document_end"
 		}
@@ -33,7 +33,7 @@
 		"page": "options.html"
 	},
 	"background": {
-		"service_worker": "background.js",
+		"service_worker": "background.ts",
 		"type": "module"
 	}
 }
