--- a/package.json
+++ b/package.json
@@ -1,62 +1,70 @@
 {
-  "private": true,
-  "scripts": {
-	"build": "parcel build src/manifest.json --no-content-hash --no-source-maps --dist-dir dist --no-cache --detailed-report 0",
-	"lint": "run-p lint:*",
-	"lint-fix": "run-p 'lint:* -- --fix'",
-	"lint:css": "stylelint src/**/*.css",
-	"lint:js": "xo",
-	"test": "run-p lint:* build",
-	"watch": "parcel watch src/manifest.json --dist-dir dist --no-cache --no-hmr"
-  },
-  "browserslist": [
-	"last 1 Chrome version",
-	"last 1 Firefox version"
-  ],
-  "xo": {
-	"prettier": true,
-	"envs": [
-	  "browser",
-	  "webextensions"
-	]
-  },
-  "eslintConfig": {
-	"extends": "xo",
-	"env": {
-	  "browser": true,
-	  "webextensions": true
+	"private": true,
+	"scripts": {
+		"build": "parcel build src/manifest.json --no-content-hash --no-source-maps --dist-dir dist --no-cache --detailed-report 0",
+		"lint": "run-p lint:*",
+		"lint-fix": "run-p 'lint:* -- --fix'",
+		"lint:css": "stylelint src/**/*.css",
+		"lint:js": "xo",
+		"test": "run-p lint:* build",
+		"watch": "parcel watch src/manifest.json --dist-dir dist --no-cache --no-hmr",
+	    "go": "run-s build go:brave",
+		"go:brave": "web-ext run -t chromium"
+	},
+	"browserslist": [
+		"last 1 Chrome version",
+		"last 1 Firefox version"
+	],
+	"xo": {
+		"prettier": true,
+		"envs": [
+			"browser",
+			"webextensions"
+		]
+	},
+	"eslintConfig": {
+		"extends": [
+			"xo",
+			"xo-typescript"
+		],
+		"env": {
+			"browser": true,
+			"webextensions": true
+		}
+	},
+	"stylelint": {
+		"extends": "stylelint-config-xo"
+	},
+	"dependencies": {
+		"webext-base-css": "^1.4.1",
+		"webext-options-sync": "^4.0.0"
+	},
+	"devDependencies": {
+		"@parcel/config-webextension": "^2.6.2",
+		"@parcel/core": "^2.7.0",
+		"@types/chrome": "^0.0.198",
+		"eslint": "^8.25.0",
+		"eslint-config-xo": "^0.42.0",
+		"npm-run-all": "^4.1.5",
+		"parcel": "^2.6.2",
+		"stylelint": "^14.9.1",
+		"stylelint-config-xo": "^0.21.0",
+		"web-ext": "^7.3.1",
+		"webpack": "^5.74.0",
+		"xo": "^0.52.4"
+	},
+	"webExt": {
+		"sourceDir": "dist",
+		"run": {
+			"startUrl": [
+				"https://news.ycombinator.com"
+			],
+			"target": "chromium",
+			"chromiumBinary": "/Applications/Brave\\ Browser.app/Contents/MacOS/Brave\\ Browser"
+		}
+	},
+	"@parcel/bundler-default-bug": "https://github.com/parcel-bundler/parcel/issues/8071",
+	"@parcel/bundler-default": {
+		"minBundles": 10000000
 	}
-  },
-  "stylelint": {
-	"extends": "stylelint-config-xo"
-  },
-  "dependencies": {
-	"webext-base-css": "^1.4.1",
-	"webext-options-sync": "^4.0.0"
-  },
-  "devDependencies": {
-	"@parcel/config-webextension": "^2.6.2",
-	"@parcel/core": "^2.7.0",
-	"@types/chrome": "^0.0.198",
-	"eslint": "^8.25.0",
-	"eslint-config-xo": "^0.42.0",
-	"npm-run-all": "^4.1.5",
-	"parcel": "^2.6.2",
-	"stylelint": "^14.9.1",
-	"stylelint-config-xo": "^0.21.0",
-	"webpack": "^5.74.0",
-	"xo": "^0.52.4"
-  },
-  "webExt": {
-	"sourceDir": "dist",
-	"run": {
-	  "startUrl": [
-		"https://github.com/lookfirst/hn-comment"
-	  ]
-	}
-  },
-  "@parcel/bundler-default-bug": "https://github.com/parcel-bundler/parcel/issues/8071",
-  "@parcel/bundler-default": {
-	"minBundles": 10000000
-  }
 }
